# pitch-vision

./: .gitignore  README.md  data.yaml  pyproject.toml
notebooks/: 01_eda.ipynb  02_classical_ml.ipynb  04_yolo_transfer.ipynb
pitch_vision/: __init__.py  download_dataset.py
scripts/: download_dataset.py
src/pitch_vision/: classical_ml.py  dataset.py  download_dataset.py  eda_utils.py
