[project]
name = "pitch-vision"
version = "0.1.0"
description = "Computer Vision pipeline for football player and ball detection in match footage."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "kagglehub>=0.3.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "pandas>=2.2.0",
    "pillow>=10.2.0",
    "pyyaml>=6.0.0",
    "scikit-image>=0.22.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "tqdm>=4.66.0",
    "ultralytics>=8.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitch_vision"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
